...

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/nameTextValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Name"
                        android:textColor="@color/blue" />

                    <TextView
                        android:id="@+id/ageAndSexValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="23M"
                        android:textColor="@color/blue" />
                </TableRow>

...
