...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.NumberPickerFragment"
    android:id="@+id/numberPickerFragmentContainer">

    <NumberPicker
        android:id="@+id/numberPickerNumberPicker"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/numberPickerUnitsLabel"
...
